k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  namespace: app
  labels:
    app: nodejs-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      containers:
        - name: nodejs-app
          image: nodejs-shopping-app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"

          # Health checks
          #          livenessProbe:
          #            httpGet:
          #              path: /
          #            port: 3000
          #            initialDelaySeconds: 30
          #            periodSeconds: 20
          #            failureThreshold: 3
          #          readinessProbe:
          #            httpGet:
          #              path: /
          #              port: 3000
          #            initialDelaySeconds: 15
          #            periodSeconds: 10
          #            failureThreshold: 3
