k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-service
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: nodejs-app
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
